// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-navbar> Component <bolt-navbar> centered with 4 short links 1`] = `
<bolt-navbar class="t-bolt-xdark"
             center
             width="auto"
>
  <nav class="c-bolt-navbar c-bolt-navbar--auto  c-bolt-navbar--center c-bolt-navbar--small">
    <div class="c-bolt-navbar__title">
      <a class="c-bolt-navbar__title--link"
         href="/"
      >
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="bolt-logo-colored"
                     size="large"
          >
            <span class="c-bolt-icon c-bolt-icon--bolt-logo-colored c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 198 182"
              >
                <g fill="none"
                   fill-rule="evenodd"
                >
                  <path fill="#FFCC4C"
                        d="M72.75 49h52.5c.966 0 1.75.784 1.75 1.75v31.5a1.75 1.75 0 01-1.75 1.75h-52.5A1.75 1.75 0 0171 82.25v-31.5c0-.966.784-1.75 1.75-1.75z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M1.067 78.751l16.659-28.876A1.75 1.75 0 0119.242 49H55.25c.966 0 1.75.784 1.75 1.75v31.5A1.75 1.75 0 0155.25 84H4.098a3.5 3.5 0 01-3.031-5.249z"
                  >
                  </path>
                  <path fill="#E1E2EB"
                        d="M141 82.25v-31.5c0-.966.784-1.75 1.75-1.75h36.008a1.75 1.75 0 011.516.875l16.66 28.876A3.5 3.5 0 01193.901 84H142.75a1.75 1.75 0 01-1.75-1.75z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M85 1.75v31.5A1.75 1.75 0 0183.25 35H29.338a1.75 1.75 0 01-1.516-2.625L42.459 7.004A14 14 0 0154.586 0H83.25C84.216 0 85 .784 85 1.75z"
                  >
                  </path>
                  <path fill="#FFCC4C"
                        d="M100.75 0h42.664a14 14 0 0112.127 7.004l14.637 25.371A1.75 1.75 0 01168.662 35H100.75A1.75 1.75 0 0199 33.25V1.75c0-.966.784-1.75 1.75-1.75z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M42.46 174.996l-14.638-25.371A1.75 1.75 0 0129.338 147H97.25c.966 0 1.75.784 1.75 1.75v31.5a1.75 1.75 0 01-1.75 1.75H54.586a14 14 0 01-12.127-7.004z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M114.75 147h53.912a1.75 1.75 0 011.516 2.625l-14.637 25.371A14 14 0 01143.414 182H114.75a1.75 1.75 0 01-1.75-1.75v-31.5c0-.966.784-1.75 1.75-1.75z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M71 99.75v31.5a1.75 1.75 0 01-1.75 1.75H19.242a1.75 1.75 0 01-1.516-.875l-16.66-28.876A3.5 3.5 0 014.099 98H69.25c.966 0 1.75.784 1.75 1.75z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M86.75 98h107.152a3.5 3.5 0 013.031 5.249l-16.659 28.876a1.75 1.75 0 01-1.516.875H86.75a1.75 1.75 0 01-1.75-1.75v-31.5c0-.966.784-1.75 1.75-1.75z"
                  >
                  </path>
                </g>
              </svg>
            </span>
          </bolt-icon>
        </div>
        <h1 class="c-bolt-navbar__title-text">
          Bolt
          <span class="u-bolt-hidden u-bolt-inline@xlarge">
            Design System
          </span>
        </h1>
      </a>
    </div>
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/pattern-lab/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Components
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/docs/getting-started/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Docs
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt/releases"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Releases
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Github
                  </span>
                  <span class="__icon">
                    <bolt-icon slot="after"
                               name="github"
                    >
                      <span class="c-bolt-icon c-bolt-icon--github">
                        <svg class="c-bolt-icon__icon"
                             xmlns="http://www.w3.org/2000/svg"
                             viewbox="0 0 24 28"
                        >
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M12 2c6.625 0 12 5.375 12 12 0 5.297-3.437 9.797-8.203 11.391-.609.109-.828-.266-.828-.578 0-.391.016-1.687.016-3.297 0-1.125-.375-1.844-.812-2.219 2.672-.297 5.484-1.313 5.484-5.922 0-1.313-.469-2.375-1.234-3.219.125-.313.531-1.531-.125-3.187-1-.313-3.297 1.234-3.297 1.234a11.28 11.28 0 00-6 0S6.704 6.656 5.704 6.969c-.656 1.656-.25 2.875-.125 3.187-.766.844-1.234 1.906-1.234 3.219 0 4.594 2.797 5.625 5.469 5.922-.344.313-.656.844-.766 1.609-.688.313-2.438.844-3.484-1-.656-1.141-1.844-1.234-1.844-1.234-1.172-.016-.078.734-.078.734.781.359 1.328 1.75 1.328 1.75.703 2.141 4.047 1.422 4.047 1.422 0 1 .016 1.937.016 2.234 0 .313-.219.688-.828.578C3.439 23.796.002 19.296.002 13.999c0-6.625 5.375-12 12-12zM4.547 19.234c.031-.063-.016-.141-.109-.187-.094-.031-.172-.016-.203.031-.031.063.016.141.109.187.078.047.172.031.203-.031zm.484.532c.063-.047.047-.156-.031-.25-.078-.078-.187-.109-.25-.047-.063.047-.047.156.031.25.078.078.187.109.25.047zm.469.703c.078-.063.078-.187 0-.297-.063-.109-.187-.156-.266-.094-.078.047-.078.172 0 .281s.203.156.266.109zm.656.656c.063-.063.031-.203-.063-.297-.109-.109-.25-.125-.313-.047-.078.063-.047.203.063.297.109.109.25.125.313.047zm.891.391c.031-.094-.063-.203-.203-.25-.125-.031-.266.016-.297.109s.063.203.203.234c.125.047.266 0 .297-.094zm.984.078c0-.109-.125-.187-.266-.172-.141 0-.25.078-.25.172 0 .109.109.187.266.172.141 0 .25-.078.25-.172zm.906-.156c-.016-.094-.141-.156-.281-.141-.141.031-.234.125-.219.234.016.094.141.156.281.125s.234-.125.219-.219z"
                          >
                          </path>
                        </svg>
                      </span>
                    </bolt-icon>
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> variable width 1`] = `
<div class="o-bolt-grid o-bolt-grid--center">
  <div class="o-bolt-grid__cell u-bolt-width-2/3 u-bolt-width-1/2@small">
    <bolt-navbar class="t-bolt-dark"
                 center
                 width="auto"
    >
      <nav class="c-bolt-navbar c-bolt-navbar--auto  c-bolt-navbar--center c-bolt-navbar--small">
        <bolt-nav-priority more-text="More">
          <nav class="c-bolt-nav-priority">
            <bolt-nav-indicator>
              <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
                <li class="c-bolt-nav-priority__item">
                  <bolt-navlink>
                    <a href="/pattern-lab/index.html"
                       class="c-bolt-navlink"
                    >
                      <span class="c-bolt-navlink__text">
                        Components
                      </span>
                    </a>
                  </bolt-navlink>
                </li>
                <li class="c-bolt-nav-priority__item">
                  <bolt-navlink>
                    <a href="/docs/getting-started/index.html"
                       class="c-bolt-navlink"
                    >
                      <span class="c-bolt-navlink__text">
                        Docs
                      </span>
                    </a>
                  </bolt-navlink>
                </li>
                <li class="c-bolt-nav-priority__item">
                  <bolt-navlink>
                    <a target="_blank"
                       href="https://github.com/bolt-design-system/bolt/releases"
                       class="c-bolt-navlink"
                    >
                      <span class="c-bolt-navlink__text">
                        Releases
                      </span>
                    </a>
                  </bolt-navlink>
                </li>
                <li class="c-bolt-nav-priority__item">
                  <bolt-navlink>
                    <a target="_blank"
                       href="https://github.com/bolt-design-system/bolt"
                       class="c-bolt-navlink"
                    >
                      <span class="c-bolt-navlink__text">
                        Github
                      </span>
                      <span class="__icon">
                        <bolt-icon slot="after"
                                   name="github"
                        >
                          <span class="c-bolt-icon c-bolt-icon--github">
                            <svg class="c-bolt-icon__icon"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewbox="0 0 24 28"
                            >
                              <path fill="var(--bolt-theme-icon, currentColor)"
                                    d="M12 2c6.625 0 12 5.375 12 12 0 5.297-3.437 9.797-8.203 11.391-.609.109-.828-.266-.828-.578 0-.391.016-1.687.016-3.297 0-1.125-.375-1.844-.812-2.219 2.672-.297 5.484-1.313 5.484-5.922 0-1.313-.469-2.375-1.234-3.219.125-.313.531-1.531-.125-3.187-1-.313-3.297 1.234-3.297 1.234a11.28 11.28 0 00-6 0S6.704 6.656 5.704 6.969c-.656 1.656-.25 2.875-.125 3.187-.766.844-1.234 1.906-1.234 3.219 0 4.594 2.797 5.625 5.469 5.922-.344.313-.656.844-.766 1.609-.688.313-2.438.844-3.484-1-.656-1.141-1.844-1.234-1.844-1.234-1.172-.016-.078.734-.078.734.781.359 1.328 1.75 1.328 1.75.703 2.141 4.047 1.422 4.047 1.422 0 1 .016 1.937.016 2.234 0 .313-.219.688-.828.578C3.439 23.796.002 19.296.002 13.999c0-6.625 5.375-12 12-12zM4.547 19.234c.031-.063-.016-.141-.109-.187-.094-.031-.172-.016-.203.031-.031.063.016.141.109.187.078.047.172.031.203-.031zm.484.532c.063-.047.047-.156-.031-.25-.078-.078-.187-.109-.25-.047-.063.047-.047.156.031.25.078.078.187.109.25.047zm.469.703c.078-.063.078-.187 0-.297-.063-.109-.187-.156-.266-.094-.078.047-.078.172 0 .281s.203.156.266.109zm.656.656c.063-.063.031-.203-.063-.297-.109-.109-.25-.125-.313-.047-.078.063-.047.203.063.297.109.109.25.125.313.047zm.891.391c.031-.094-.063-.203-.203-.25-.125-.031-.266.016-.297.109s.063.203.203.234c.125.047.266 0 .297-.094zm.984.078c0-.109-.125-.187-.266-.172-.141 0-.25.078-.25.172 0 .109.109.187.266.172.141 0 .25-.078.25-.172zm.906-.156c-.016-.094-.141-.156-.281-.141-.141.031-.234.125-.219.234.016.094.141.156.281.125s.234-.125.219-.219z"
                              >
                              </path>
                            </svg>
                          </span>
                        </bolt-icon>
                      </span>
                    </a>
                  </bolt-navlink>
                </li>
              </ul>
            </bolt-nav-indicator>
          </nav>
        </bolt-nav-priority>
      </nav>
    </bolt-navbar>
  </div>
</div>
`;

exports[`<bolt-navbar> Component <bolt-navbar> with 4 short links 1`] = `
<bolt-navbar class="t-bolt-xdark"
             width="auto"
>
  <nav class="c-bolt-navbar c-bolt-navbar--auto ">
    <div class="c-bolt-navbar__title">
      <a class="c-bolt-navbar__title--link"
         href="/"
      >
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="bolt-logo-colored"
                     size="large"
          >
            <span class="c-bolt-icon c-bolt-icon--bolt-logo-colored c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 198 182"
              >
                <g fill="none"
                   fill-rule="evenodd"
                >
                  <path fill="#FFCC4C"
                        d="M72.75 49h52.5c.966 0 1.75.784 1.75 1.75v31.5a1.75 1.75 0 01-1.75 1.75h-52.5A1.75 1.75 0 0171 82.25v-31.5c0-.966.784-1.75 1.75-1.75z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M1.067 78.751l16.659-28.876A1.75 1.75 0 0119.242 49H55.25c.966 0 1.75.784 1.75 1.75v31.5A1.75 1.75 0 0155.25 84H4.098a3.5 3.5 0 01-3.031-5.249z"
                  >
                  </path>
                  <path fill="#E1E2EB"
                        d="M141 82.25v-31.5c0-.966.784-1.75 1.75-1.75h36.008a1.75 1.75 0 011.516.875l16.66 28.876A3.5 3.5 0 01193.901 84H142.75a1.75 1.75 0 01-1.75-1.75z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M85 1.75v31.5A1.75 1.75 0 0183.25 35H29.338a1.75 1.75 0 01-1.516-2.625L42.459 7.004A14 14 0 0154.586 0H83.25C84.216 0 85 .784 85 1.75z"
                  >
                  </path>
                  <path fill="#FFCC4C"
                        d="M100.75 0h42.664a14 14 0 0112.127 7.004l14.637 25.371A1.75 1.75 0 01168.662 35H100.75A1.75 1.75 0 0199 33.25V1.75c0-.966.784-1.75 1.75-1.75z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M42.46 174.996l-14.638-25.371A1.75 1.75 0 0129.338 147H97.25c.966 0 1.75.784 1.75 1.75v31.5a1.75 1.75 0 01-1.75 1.75H54.586a14 14 0 01-12.127-7.004z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M114.75 147h53.912a1.75 1.75 0 011.516 2.625l-14.637 25.371A14 14 0 01143.414 182H114.75a1.75 1.75 0 01-1.75-1.75v-31.5c0-.966.784-1.75 1.75-1.75z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M71 99.75v31.5a1.75 1.75 0 01-1.75 1.75H19.242a1.75 1.75 0 01-1.516-.875l-16.66-28.876A3.5 3.5 0 014.099 98H69.25c.966 0 1.75.784 1.75 1.75z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M86.75 98h107.152a3.5 3.5 0 013.031 5.249l-16.659 28.876a1.75 1.75 0 01-1.516.875H86.75a1.75 1.75 0 01-1.75-1.75v-31.5c0-.966.784-1.75 1.75-1.75z"
                  >
                  </path>
                </g>
              </svg>
            </span>
          </bolt-icon>
        </div>
        <h1 class="c-bolt-navbar__title-text">
          Bolt
          <span class="u-bolt-hidden u-bolt-inline@xlarge">
            Design System
          </span>
        </h1>
      </a>
    </div>
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/pattern-lab/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Components
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/docs/getting-started/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Docs
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt/releases"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Releases
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Github
                  </span>
                  <span class="__icon">
                    <bolt-icon slot="after"
                               name="github"
                    >
                      <span class="c-bolt-icon c-bolt-icon--github">
                        <svg class="c-bolt-icon__icon"
                             xmlns="http://www.w3.org/2000/svg"
                             viewbox="0 0 24 28"
                        >
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M12 2c6.625 0 12 5.375 12 12 0 5.297-3.437 9.797-8.203 11.391-.609.109-.828-.266-.828-.578 0-.391.016-1.687.016-3.297 0-1.125-.375-1.844-.812-2.219 2.672-.297 5.484-1.313 5.484-5.922 0-1.313-.469-2.375-1.234-3.219.125-.313.531-1.531-.125-3.187-1-.313-3.297 1.234-3.297 1.234a11.28 11.28 0 00-6 0S6.704 6.656 5.704 6.969c-.656 1.656-.25 2.875-.125 3.187-.766.844-1.234 1.906-1.234 3.219 0 4.594 2.797 5.625 5.469 5.922-.344.313-.656.844-.766 1.609-.688.313-2.438.844-3.484-1-.656-1.141-1.844-1.234-1.844-1.234-1.172-.016-.078.734-.078.734.781.359 1.328 1.75 1.328 1.75.703 2.141 4.047 1.422 4.047 1.422 0 1 .016 1.937.016 2.234 0 .313-.219.688-.828.578C3.439 23.796.002 19.296.002 13.999c0-6.625 5.375-12 12-12zM4.547 19.234c.031-.063-.016-.141-.109-.187-.094-.031-.172-.016-.203.031-.031.063.016.141.109.187.078.047.172.031.203-.031zm.484.532c.063-.047.047-.156-.031-.25-.078-.078-.187-.109-.25-.047-.063.047-.047.156.031.25.078.078.187.109.25.047zm.469.703c.078-.063.078-.187 0-.297-.063-.109-.187-.156-.266-.094-.078.047-.078.172 0 .281s.203.156.266.109zm.656.656c.063-.063.031-.203-.063-.297-.109-.109-.25-.125-.313-.047-.078.063-.047.203.063.297.109.109.25.125.313.047zm.891.391c.031-.094-.063-.203-.203-.25-.125-.031-.266.016-.297.109s.063.203.203.234c.125.047.266 0 .297-.094zm.984.078c0-.109-.125-.187-.266-.172-.141 0-.25.078-.25.172 0 .109.109.187.266.172.141 0 .25-.078.25-.172zm.906-.156c-.016-.094-.141-.156-.281-.141-.141.031-.234.125-.219.234.016.094.141.156.281.125s.234-.125.219-.219z"
                          >
                          </path>
                        </svg>
                      </span>
                    </bolt-icon>
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> with 6 lengthy links 1`] = `
<bolt-navbar class="t-bolt-dark"
             width="full"
>
  <nav class="c-bolt-navbar c-bolt-navbar--full ">
    <div class="c-bolt-navbar__title">
      <div class="c-bolt-navbar__title--static">
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="marketing-gray"
                     size="large"
          >
            <span class="c-bolt-icon c-bolt-icon--marketing-gray c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   data-name="Layer 1"
                   viewbox="0 0 32 32"
              >
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M30.3 8.8H28a13.68 13.68 0 012 7.2A14 14 0 1116 2a14.48 14.48 0 017.4 2.1V1.8A15.29 15.29 0 0016 0a16 16 0 1016 16 15.6 15.6 0 00-1.7-7.2"
                      data-name="Fill-1"
                >
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M16 8a8.15 8.15 0 013.1.6l1.5-1.5A10.39 10.39 0 0016 6a10 10 0 1010 10 9.39 9.39 0 00-1.2-4.7l-1.5 1.5A8.76 8.76 0 0124 16a8 8 0 11-8-8"
                      data-name="Fill-4"
                >
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M16 16.5a.5.5 0 11.5-.5.47.47 0 01-.5.5zm.9-2.8a2.92 2.92 0 00-.9-.2 2.5 2.5 0 102.5 2.5 2.39 2.39 0 00-.2-.9L25.4 8H30V6h-2.6l1.8-1.8-1.4-1.4L26 4.5V2h-2v4.6z"
                      data-name="Fill-6"
                >
                </path>
              </svg>
            </span>
          </bolt-icon>
        </div>
        <h2 class="c-bolt-navbar__title-text">
          Navbar with links
        </h2>
      </div>
    </div>
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Real-Time AI
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    End-to-end Automation
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Journey-centric Delivery
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Low Code
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Multi-dimensional Power
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Cloud Choice
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> with a linked title 1`] = `
<bolt-navbar class="t-bolt-light"
             width="full"
>
  <nav class="c-bolt-navbar c-bolt-navbar--full ">
    <div class="c-bolt-navbar__title">
      <a class="c-bolt-navbar__title--link"
         href="https://www.boltdesignsystem.com"
      >
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="bolt-logo-colored"
                     size="large"
          >
            <span class="c-bolt-icon c-bolt-icon--bolt-logo-colored c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 198 182"
              >
                <g fill="none"
                   fill-rule="evenodd"
                >
                  <path fill="#FFCC4C"
                        d="M72.75 49h52.5c.966 0 1.75.784 1.75 1.75v31.5a1.75 1.75 0 01-1.75 1.75h-52.5A1.75 1.75 0 0171 82.25v-31.5c0-.966.784-1.75 1.75-1.75z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M1.067 78.751l16.659-28.876A1.75 1.75 0 0119.242 49H55.25c.966 0 1.75.784 1.75 1.75v31.5A1.75 1.75 0 0155.25 84H4.098a3.5 3.5 0 01-3.031-5.249z"
                  >
                  </path>
                  <path fill="#E1E2EB"
                        d="M141 82.25v-31.5c0-.966.784-1.75 1.75-1.75h36.008a1.75 1.75 0 011.516.875l16.66 28.876A3.5 3.5 0 01193.901 84H142.75a1.75 1.75 0 01-1.75-1.75z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M85 1.75v31.5A1.75 1.75 0 0183.25 35H29.338a1.75 1.75 0 01-1.516-2.625L42.459 7.004A14 14 0 0154.586 0H83.25C84.216 0 85 .784 85 1.75z"
                  >
                  </path>
                  <path fill="#FFCC4C"
                        d="M100.75 0h42.664a14 14 0 0112.127 7.004l14.637 25.371A1.75 1.75 0 01168.662 35H100.75A1.75 1.75 0 0199 33.25V1.75c0-.966.784-1.75 1.75-1.75z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M42.46 174.996l-14.638-25.371A1.75 1.75 0 0129.338 147H97.25c.966 0 1.75.784 1.75 1.75v31.5a1.75 1.75 0 01-1.75 1.75H54.586a14 14 0 01-12.127-7.004z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M114.75 147h53.912a1.75 1.75 0 011.516 2.625l-14.637 25.371A14 14 0 01143.414 182H114.75a1.75 1.75 0 01-1.75-1.75v-31.5c0-.966.784-1.75 1.75-1.75z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M71 99.75v31.5a1.75 1.75 0 01-1.75 1.75H19.242a1.75 1.75 0 01-1.516-.875l-16.66-28.876A3.5 3.5 0 014.099 98H69.25c.966 0 1.75.784 1.75 1.75z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M86.75 98h107.152a3.5 3.5 0 013.031 5.249l-16.659 28.876a1.75 1.75 0 01-1.516.875H86.75a1.75 1.75 0 01-1.75-1.75v-31.5c0-.966.784-1.75 1.75-1.75z"
                  >
                  </path>
                </g>
              </svg>
            </span>
          </bolt-icon>
        </div>
        <h1 class="c-bolt-navbar__title-text">
          Bolt Design System
        </h1>
      </a>
    </div>
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Real-Time AI
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    End-to-end Automation
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Journey-centric Delivery
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Low Code
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Multi-dimensional Power
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Cloud Choice
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> without a title 1`] = `
<bolt-navbar class="t-bolt-dark"
             width="full"
>
  <nav class="c-bolt-navbar c-bolt-navbar--full ">
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/pattern-lab/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Components
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/docs/getting-started/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Docs
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt/releases"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Releases
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Github
                  </span>
                  <span class="__icon">
                    <bolt-icon slot="after"
                               name="github"
                    >
                      <span class="c-bolt-icon c-bolt-icon--github">
                        <svg class="c-bolt-icon__icon"
                             xmlns="http://www.w3.org/2000/svg"
                             viewbox="0 0 24 28"
                        >
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M12 2c6.625 0 12 5.375 12 12 0 5.297-3.437 9.797-8.203 11.391-.609.109-.828-.266-.828-.578 0-.391.016-1.687.016-3.297 0-1.125-.375-1.844-.812-2.219 2.672-.297 5.484-1.313 5.484-5.922 0-1.313-.469-2.375-1.234-3.219.125-.313.531-1.531-.125-3.187-1-.313-3.297 1.234-3.297 1.234a11.28 11.28 0 00-6 0S6.704 6.656 5.704 6.969c-.656 1.656-.25 2.875-.125 3.187-.766.844-1.234 1.906-1.234 3.219 0 4.594 2.797 5.625 5.469 5.922-.344.313-.656.844-.766 1.609-.688.313-2.438.844-3.484-1-.656-1.141-1.844-1.234-1.844-1.234-1.172-.016-.078.734-.078.734.781.359 1.328 1.75 1.328 1.75.703 2.141 4.047 1.422 4.047 1.422 0 1 .016 1.937.016 2.234 0 .313-.219.688-.828.578C3.439 23.796.002 19.296.002 13.999c0-6.625 5.375-12 12-12zM4.547 19.234c.031-.063-.016-.141-.109-.187-.094-.031-.172-.016-.203.031-.031.063.016.141.109.187.078.047.172.031.203-.031zm.484.532c.063-.047.047-.156-.031-.25-.078-.078-.187-.109-.25-.047-.063.047-.047.156.031.25.078.078.187.109.25.047zm.469.703c.078-.063.078-.187 0-.297-.063-.109-.187-.156-.266-.094-.078.047-.078.172 0 .281s.203.156.266.109zm.656.656c.063-.063.031-.203-.063-.297-.109-.109-.25-.125-.313-.047-.078.063-.047.203.063.297.109.109.25.125.313.047zm.891.391c.031-.094-.063-.203-.203-.25-.125-.031-.266.016-.297.109s.063.203.203.234c.125.047.266 0 .297-.094zm.984.078c0-.109-.125-.187-.266-.172-.141 0-.25.078-.25.172 0 .109.109.187.266.172.141 0 .25-.078.25-.172zm.906-.156c-.016-.094-.141-.156-.281-.141-.141.031-.234.125-.219.234.016.094.141.156.281.125s.234-.125.219-.219z"
                          >
                          </path>
                        </svg>
                      </span>
                    </bolt-icon>
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> without links 1`] = `
<bolt-navbar class="t-bolt-dark"
             width="full"
>
  <nav class="c-bolt-navbar c-bolt-navbar--full ">
    <div class="c-bolt-navbar__title">
      <div class="c-bolt-navbar__title--static">
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="marketing-gray"
                     size="large"
          >
            <span class="c-bolt-icon c-bolt-icon--marketing-gray c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   data-name="Layer 1"
                   viewbox="0 0 32 32"
              >
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M30.3 8.8H28a13.68 13.68 0 012 7.2A14 14 0 1116 2a14.48 14.48 0 017.4 2.1V1.8A15.29 15.29 0 0016 0a16 16 0 1016 16 15.6 15.6 0 00-1.7-7.2"
                      data-name="Fill-1"
                >
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M16 8a8.15 8.15 0 013.1.6l1.5-1.5A10.39 10.39 0 0016 6a10 10 0 1010 10 9.39 9.39 0 00-1.2-4.7l-1.5 1.5A8.76 8.76 0 0124 16a8 8 0 11-8-8"
                      data-name="Fill-4"
                >
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M16 16.5a.5.5 0 11.5-.5.47.47 0 01-.5.5zm.9-2.8a2.92 2.92 0 00-.9-.2 2.5 2.5 0 102.5 2.5 2.39 2.39 0 00-.2-.9L25.4 8H30V6h-2.6l1.8-1.8-1.4-1.4L26 4.5V2h-2v4.6z"
                      data-name="Fill-6"
                >
                </path>
              </svg>
            </span>
          </bolt-icon>
        </div>
        <h2 class="c-bolt-navbar__title-text">
          Navbar without links
        </h2>
      </div>
    </div>
  </nav>
</bolt-navbar>
`;
